v6.2
-----
+ Added option to set which homepage tab displays by default


v6.1.1
-----
: Fixed a bug with account total not being correct for Russian currencies
: Fixed a bug on homepage layout due to a change made by Valve
: Fixed a bug where the "popular" tab wouldn't always show correctly
: Fixed a bug where the market summary would display incorrectly due to a change made by Valve

v6.1
-----
+ Added a "Popular" tab on the homepage to browse the most-played games on Steam
+ Store pages now display a full size background
+ Gift transactions are now separated out in total spent section of account page
+ Selecting booster packs in your inventory now shows the average price of three cards for that game
+ Added option to only search within product names
+ Added inventory marketplace support for Battleblock Theater items
+ Added a loading dialog to custom profile background selection
+ Added price history support for Gameolith and Fireflower Games, removed Beamdog support
+ Added a secret...
: Fixed a bug that caused price comparison overlays to be partially hidden in some circumstances
: Fixed a bug that sometimes caused purchase date to be incorrect after buying the game as a gift
: Fixed a bug which would cause CS:GO items not to get market data in non-English languages

v6.0.1
-----
+ Added filter to the new release section that will filter out older games (thanks TotalBiscuit!)
: Fixed a bug on wishlist pages where price history would remain after making changes
: Fixed a bug on the market page caused by layout changes
: Fixed a bug on sub pages that caused price history not to display

v6.0
-----
+ Added warning dialog when browsing Steam in a language other than your preferred language
+ Added price history information to the wishlist page when hovering over a game
+ Added option to display store page videos using HTML5 player instead of Flash
+ Added library filtering options by genre and by category