@@ -99,7 +99,8 @@ function save_options() {
 		$("#indiegamestand").prop('checked'),
 		$("#squenix").prop('checked'),
 		$("#bundlestars").prop('checked'),
-		$("#fireflower").prop('checked')
+		$("#fireflower").prop('checked'),
+		$("#humblewidgets").prop('checked')
 	];
 	showregionalprice = $("#regional_price_on").val();
 	regional_hideworld = $("#regional_hideworld").prop('checked');
@@ -331,6 +332,7 @@ function toggle_stores() {
 			$("#squenix").prop('checked', settings.stores[22]);
 			$("#bundlestars").prop('checked', settings.stores[23]);
 			$("#fireflower").prop('checked', settings.stores[24]);
+			$("#humblewidgets").prop('checked', settings.stores[25]);
 		});
 		break;
 	}
@@ -428,7 +430,7 @@ function load_options() {
 		if (settings.showlowestprice_onwishlist === undefined) { settings.showlowestprice_onwishlist = true; chrome.storage.sync.set({'showlowestprice_onwishlist': settings.showlowestprice_onwishlist}); }
 		if (settings.showlowestpricecoupon === undefined) { settings.showlowestpricecoupon = true; chrome.storage.sync.set({'showlowestpricecoupon': settings.showlowestpricecoupon}); }
 		if (settings.showallstores === undefined) { settings.showallstores = true; chrome.storage.sync.set({'showallstores': settings.showallstores}); }
-		if (settings.stores === undefined) { settings.stores = [true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true]; chrome.storage.sync.set({'stores': settings.stores}); }
+		if (settings.stores === undefined) { settings.stores = [true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true]; chrome.storage.sync.set({'stores': settings.stores}); }
 		if (settings.showregionalprice === undefined) { settings.showregionalprice = "mouse"; chrome.storage.sync.set({'showregionalprice': settings.showregionalprice}); }
 		if (settings.regional_countries === undefined) { settings.regional_countries = ["us","gb","eu1","eu2","ru","br","au"]; chrome.storage.sync.set({'regional_countries': settings.regional_countries}); }
 
